apps/sscs/aat/base/sscs-track-appeal-redirect-ingress.yaml
# this is to apply permanent redirect on track-appeal.aat.platform.hmcts.net
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: sscs-trackappealredirect@kubernetescrd
  name: sscs-track-appeal-redirect-ingress
  namespace: sscs
spec:
  rules:
    - host: track-appeal.aat.platform.hmcts.net
      http:
        paths:
          - backend:
              service:
                name: sscs-cor-frontend-nodejs
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: trackappealredirect
  namespace: sscs
spec:
  redirectRegex:
    permanent: true
    regex: ^http://track-appeal.aat.platform.hmcts.net/evidence/(.*)|http://track-appeal.aat.platform.hmcts.net/trackyourappeal/(.*)|http://track-appeal.aat.platform.hmcts.net/expenses/(.*)|http://track-appeal.aat.platform.hmcts.net/abouthearing/(.*)|http://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/evidence|http://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/trackyourappeal|http://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/expenses|http://track-appeal. [...]
    replacement: https://sscs-cor.aat.platform.hmcts.net/validate-surname/:tya/trackyourappeal?tya=${1}${2}${3}${4}${5}${6}${7}${8}
